--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:textSize="16sp"
-        tools:text="22" />
+        android:textSize="14sp"
+        tools:text="22"
+        android:fontFamily="@font/noto_sans_bold"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
