--- a/app/src/main/res/layout/calendar_day_titles_container.xml
+++ b/app/src/main/res/layout/calendar_day_titles_container.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="7"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_marginHorizontal="20dp"
+    android:layout_marginTop="20dp">
 
     <include layout="@layout/calendar_day_title_text" />
 
