--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,11 +8,18 @@
     tools:context=".HomeFragment"
     android:background="@color/lilacPetalsDark">
 
+    <include
+        android:id="@+id/titlesContainer"
+        layout="@layout/calendar_day_titles_container" />
+
     <com.kizitonwose.calendar.view.WeekCalendarView
-    android:id="@+id/weekCalendarView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cv_dayViewResource="@layout/calendar_day_layout" />
+        android:background="@drawable/rounded"
+        android:backgroundTint="@color/white"
+        android:layout_marginHorizontal="20dp"
+        android:id="@+id/weekCalendarView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cv_dayViewResource="@layout/calendar_day_layout" />
 
     <TextView
         android:id="@+id/mainHeader"
@@ -48,7 +55,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/rounded"
             android:backgroundTint="@color/violetLite"
-            android:layout_marginHorizontal="20dp">
+            android:layout_marginHorizontal="30dp">
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -184,13 +191,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/deepBlue" />
+            app:tint="@color/deepBlue"
+            android:paddingEnd="30dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/habitRecycler"
-        android:layout_margin="20dp"
+        android:layout_margin="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
