--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,7 +51,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="wrap_content"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded"
             android:backgroundTint="@color/violetLite"
@@ -94,6 +94,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
             <TextView
+                android:id="@+id/dayNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
@@ -107,7 +108,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded"
             android:backgroundTint="@color/waterLight">
@@ -149,16 +150,21 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView1" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/affirmation"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:fontFamily="@font/noto_sans_bold"
-                android:text="Я самая..."
+                android:text="Я самая топовая"
                 android:textColor="@color/deepBlue"
                 android:textSize="20sp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:paddingHorizontal="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView1"
                 app:layout_constraintTop_toBottomOf="@+id/textView1" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
