--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +8,7 @@
     android:orientation="vertical"
     tools:context=".HomeFragment"
     android:background="@color/lilacPetalsDark">
+
 
     <include
         android:id="@+id/titlesContainer"
@@ -74,6 +76,7 @@
                 app:tint="@color/lilacPetals" />
 
             <ImageView
+                android:id="@+id/arrowIcon"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/arrow_long_right"
@@ -130,6 +133,7 @@
                 app:tint="@color/lilacPetals" />
 
             <ImageView
+                android:id="@+id/arrowIcon2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/arrow_long_right"
