zero design but i hope that will be enough (cause its already enough of me

--- a/app/src/main/res/layout/fragment_habit_detail.xml
+++ b/app/src/main/res/layout/fragment_habit_detail.xml
@@ -30,4 +30,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Назад" />
+
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Удалить привычку"
+        android:backgroundTint="@color/pinkypie"/>
 </LinearLayout>
