--- a/app/src/main/res/layout/fragment_habit_tracker.xml
+++ b/app/src/main/res/layout/fragment_habit_tracker.xml
@@ -7,17 +7,6 @@
     android:orientation="vertical"
     tools:context=".HabitTrackerFragment">
 
-    <include
-        android:id="@+id/titlesContainer"
-        layout="@layout/calendar_day_titles_container" />
-
-    <com.kizitonwose.calendar.view.WeekCalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cv_dayViewResource="@layout/calendar_day_layout" />
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,7 +18,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_bold"
             android:paddingStart="30dp"
-            android:text="Привычки"
+            android:text="Привычки на сегодня"
             android:textColor="@color/deepBlue"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -49,11 +38,88 @@
             app:tint="@color/deepBlue" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/habitRecycler"
+        android:layout_marginHorizontal="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/habitRecycler"-->
-<!--        android:layout_margin="20dp"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent" />-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:id="@+id/diaryHeading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_bold"
+            android:paddingStart="30dp"
+            android:text="Дневник эмоций"
+            android:textColor="@color/deepBlue"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:contentDescription="Plus Button"
+            android:id="@+id/plusButton2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:backgroundTint="@color/lilacPetalsDark"
+            android:src="@drawable/baseline_add_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/deepBlue" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_marginHorizontal="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/notesEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Write your notes here"
+        android:inputType="textMultiLine"
+        android:lines="3"
+        android:gravity="top|start"
+        android:background="@drawable/rounded"
+        android:padding="8dp" />
+
+    <!-- Mood selection buttons -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/happyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="😊 Отлично"
+            android:layout_marginEnd="8dp" />
+
+        <Button
+            android:id="@+id/calmButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="😌 Нормально"
+            android:layout_marginEnd="8dp" />
+
+        <Button
+            android:id="@+id/sadButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="😢 Плохо" />
+    </LinearLayout>
+
+
 
 </LinearLayout>
