--- a/app/src/main/res/layout/fragment_habit_tracker.xml
+++ b/app/src/main/res/layout/fragment_habit_tracker.xml
@@ -35,7 +35,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/deepBlue" />
+            app:tint="@color/deepBlue"
+            android:layout_marginEnd="30dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -72,7 +73,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/deepBlue" />
+            app:tint="@color/deepBlue"
+            android:layout_marginEnd="30dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -85,39 +87,47 @@
         android:id="@+id/notesEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Write your notes here"
+        android:hint="Заметки дня..."
         android:inputType="textMultiLine"
         android:lines="3"
         android:gravity="top|start"
         android:background="@drawable/rounded"
-        android:padding="8dp" />
+        android:padding="8dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="12dp"/>
 
     <!-- Mood selection buttons -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_marginHorizontal="20dp">
 
         <Button
             android:id="@+id/happyButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="😊 Отлично"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            android:backgroundTint="@color/pinkypie"
+            android:fontFamily="@font/noto_sans_bold"
+            android:textSize="12sp"/>
 
         <Button
             android:id="@+id/calmButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="😌 Нормально"
-            android:layout_marginEnd="8dp" />
+            android:text="😌 Хорошо"
+            android:layout_marginEnd="8dp"
+            android:backgroundTint="@color/violet"/>
 
         <Button
             android:id="@+id/sadButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="😢 Плохо" />
+            android:text="😢 Плохо"
+            android:backgroundTint="@color/coldGrey"/>
     </LinearLayout>
 
 
