--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -202,7 +202,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/deepBlue"
-            android:paddingEnd="30dp"/>
+            android:layout_marginEnd="30dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
