--- a/app/src/main/res/layout/fragment_habit_detail.xml
+++ b/app/src/main/res/layout/fragment_habit_detail.xml
@@ -35,7 +35,11 @@
         android:textColor="@color/deepBlue"
         android:fontFamily="@font/noto_sans"/>
 
-
+    <Button
+        android:id="@+id/editButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Редактировать привычку" />
 
     <Button
         android:id="@+id/deleteButton"
